--- a/ECDQecdq.html
+++ b/ECDQecdq.html
@@ -171,7 +171,7 @@
         <a class="box b">
             <video controls width="600vw">
             
-                <source src="Journal1.mp4"
+                <source src="Journal1.m4v"
                         type="video/mp4">
             </video>
 <br>
@@ -181,7 +181,7 @@
         <a class="box b1">
             <video controls width="600vw">
                 
-                <source src="Journal2.mp4"
+                <source src="Journal2.m4v"
                             type="video/mp4">
             </video>
 <br> 
