--- a/ECDQecdq.html
+++ b/ECDQecdq.html
@@ -56,6 +56,7 @@
             grid-row: 5;
             display:flex;
             align-items: center;
+            text-align: center;
         }
         .f {
             grid-column: 1;
