--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <a href="ECDQentretiens.html" class="box e">Entretien avec Michel et françois</a>
         <a href="ECDQshot.html" class="box f">Shot story</a>
         <a href="ECDQecdq.html" class="box g">Entretiens ECDQ</a>
-        <a href="ECDQdiy.html" lass="box y">Tuto DIY</a>
+        <a href="ECDQdiy.html" class="box y">Tuto DIY</a>
         <a href="ECDQsandwich.html" class="box h">Club Sandwich</a>
         <a class="box b"> <img src="johnjose.jpg" width="200vw"> </a>
         <a class="box jj"> John-José, envoyé par Victor Bois</a>  
